# PaddleOCR-VL-SFT-for-Japanese-Manga-on-RTX-3060

./: .env.example  LICENSE  README.md  custom_collator.py  evaluate_model.py  ocr_dataset.py  prepare_manga109_data.py  pyproject.toml  requirements.txt  sft_paddleocr_vl.py  train.sh
